# rs-cel-mcp

./: Cargo.toml  README.md  build.sh  cel-mcp  example.sh
src/: cel_tool.rs  lib.rs
